<resources>
    <string name="app_name">MovieDb</string>
    <string name="popular_recycler_label">Popular</string>
    <string name="top_rated_recycler_label">Top Rated</string>
    <string name="upcoming_recycler_label">Upcoming</string>
    <string name="movie_image_content_description">Movie Image</string>
    <string name="try_again">Tentar novamente</string>
    <string name="movie_image_content_description">Movie Image</string>
    <string name="error_image_content_description">Error Image</string>
    <string name="no_internet_connection">Sem conexão com a internet</string>
</resources>
