<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragmentRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/mainFragmentLoading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/mainFragmentPopularTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/popular_recycler_label"
            app:layout_constraintBottom_toTopOf="@+id/mainFragmentPopularRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/mainFragmentPopularLoading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/mainFragmentPopularRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentPopularTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentPopularTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentPopularTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainFragmentPopularRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/mainFragmentTopRatedRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentPopularTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentPopularTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentPopularTextView"
            tools:itemCount="4"
            tools:listitem="@layout/item_movie"/>

        <TextView
            android:id="@+id/mainFragmentTopRatedTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/top_rated_recycler_label"
            app:layout_constraintBottom_toTopOf="@+id/mainFragmentTopRatedRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentPopularRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentPopularRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentPopularRecyclerView"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/mainFragmentTopRatedLoading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/mainFragmentTopRatedRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentTopRatedTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentTopRatedTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentTopRatedTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainFragmentTopRatedRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/mainFragmentUpcomingTextView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentTopRatedTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentTopRatedTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentTopRatedTextView"
            tools:itemCount="4"
            tools:listitem="@layout/item_movie"/>

        <TextView
            android:id="@+id/mainFragmentUpcomingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/upcoming_recycler_label"
            app:layout_constraintBottom_toTopOf="@+id/mainFragmentUpcomingRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentTopRatedRecyclerView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentTopRatedRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentTopRatedRecyclerView"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/mainFragmentUpcomingLoading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/mainFragmentUpcomingRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentUpcomingTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentUpcomingTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentUpcomingTextView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainFragmentUpcomingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mainFragmentUpcomingTextView"
            app:layout_constraintStart_toStartOf="@+id/mainFragmentUpcomingTextView"
            app:layout_constraintTop_toBottomOf="@+id/mainFragmentUpcomingTextView"
            tools:itemCount="4"
            tools:listitem="@layout/item_movie"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>